Updated for Div cards
