# BlazorAPI/bin/Release/net7.0/swagger.json
@@ -5,6 +5,143 @@
     "version": "1.0"
   },
   "paths": {
+    "/api/DivinationCards": {
+      "get": {
+        "tags": [
+          "DivinationCards"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DivinationCard"
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "DivinationCards"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DivinationCard"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/DivinationCard"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/DivinationCards/{id}": {
+      "get": {
+        "tags": [
+          "DivinationCards"
+        ],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/DivinationCard"
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "DivinationCards"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/DivinationCard"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "DivinationCards"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/TestModels": {
       "get": {
         "tags": [
@@ -56,6 +193,16 @@
             "schema": {
               "$ref": "#/definitions/TestModel"
             }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "TestModels"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
           }
         }
       }
@@ -208,6 +355,74 @@
         6
       ],
       "type": "integer"
+    },
+    "DivinationCard": {
+      "type": "object",
+      "properties": {
+        "verified": {
+          "type": "boolean"
+        },
+        "w": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "h": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "icon": {
+          "type": "string"
+        },
+        "stackSize": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "maxStackSize": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "league": {
+          "type": "string"
+        },
+        "id": {
+          "type": "string"
+        },
+        "name": {
+          "type": "string"
+        },
+        "typeLine": {
+          "type": "string"
+        },
+        "baseType": {
+          "type": "string"
+        },
+        "identified": {
+          "type": "boolean"
+        },
+        "ilvl": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "frameType": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "artFilename": {
+          "type": "string"
+        },
+        "x": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "y": {
+          "format": "int32",
+          "type": "integer"
+        },
+        "inventoryId": {
+          "type": "string"
+        }
+      },
+      "additionalProperties": false
     },
     "TestModel": {
       "type": "object",
